comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
   <main>
     <header>
-      <h1>Titulo do site</h1>
+      <h1>Curso grátis</h1>
     </header>
     <article>
-      <h2>Artigo 001</h2>
-      <p>texto do artigo</p>
+      <h2>Curso de html5 e css3</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, error ullam maiores quia delectus corrupti natus incidunt animi quam, voluptatibus alias amet ex libero rem cumque autem, qui laborum eveniet!</p>
     </article>
     <article>
-      <h2>Artigo 002</h2>
-      <p>texto do artigo</p>
+      <h2>Curso de JavaScript</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quaerat voluptate magni dolore exercitationem est, debitis porro fuga. Voluptatum optio saepe quod error? Fugiat omnis autem perspiciatis, odio esse perferendis.</p>
     </article>
   </main>
 </body>
